--- a/Networking/Base.lproj/Main.storyboard
+++ b/Networking/Base.lproj/Main.storyboard
@@ -69,17 +69,16 @@
             </objects>
             <point key="canvasLocation" x="815.625" y="67.605633802816897"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Courses View Controller-->
         <scene sceneID="qZq-tA-x5K">
             <objects>
-                <tableViewController id="PcK-Nj-R0b" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="YZa-Dr-KMQ">
+                <tableViewController id="PcK-Nj-R0b" customClass="CoursesViewController" customModule="Networking" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" id="YZa-Dr-KMQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="85" id="1cz-0k-cEH">
-                                <rect key="frame" x="0.0" y="49.5" width="375" height="85"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="85" id="1cz-0k-cEH" customClass="CourseCell" customModule="Networking" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1cz-0k-cEH" id="Fj8-Zq-0Mj">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
@@ -91,14 +90,15 @@
                                                 <constraint firstAttribute="width" constant="100" id="yUp-68-Won"/>
                                             </constraints>
                                         </imageView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Bk9-Jm-ZAW">
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Bk9-Jm-ZAW">
                                             <rect key="frame" x="110" y="11" width="249" height="63"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of course" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ffy-rg-O58">
-                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of course" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ffy-rg-O58">
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="29"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <size key="shadowOffset" width="0.0" height="0.0"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="0al-8C-5lZ">
                                                     <rect key="frame" x="0.0" y="34" width="39.5" height="29"/>
@@ -136,6 +136,12 @@
                                         <constraint firstItem="YJ4-7Q-9vk" firstAttribute="top" secondItem="Fj8-Zq-0Mj" secondAttribute="top" id="qLJ-Bl-Puv"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="courseImage" destination="YJ4-7Q-9vk" id="rYX-iP-Phh"/>
+                                    <outlet property="courseNameLabel" destination="Ffy-rg-O58" id="y1M-qb-Fdi"/>
+                                    <outlet property="numberOfLessons" destination="L6x-Jw-2Y8" id="JTU-PC-FGG"/>
+                                    <outlet property="numberOfTests" destination="UKL-jZ-19G" id="iRC-yQ-CWU"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -158,7 +164,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nfk-pw-zHK">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nfk-pw-zHK">
                                 <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="SCc-eH-xOm">
@@ -173,7 +179,7 @@
                             <constraint firstItem="SCc-eH-xOm" firstAttribute="centerY" secondItem="UqF-S6-P1J" secondAttribute="centerY" id="W5J-Ub-J67"/>
                             <constraint firstItem="SCc-eH-xOm" firstAttribute="centerX" secondItem="UqF-S6-P1J" secondAttribute="centerX" id="dzt-AG-YAX"/>
                             <constraint firstItem="sUX-5q-EA4" firstAttribute="trailing" secondItem="Nfk-pw-zHK" secondAttribute="trailing" id="mwj-8J-jrr"/>
-                            <constraint firstItem="sUX-5q-EA4" firstAttribute="bottom" secondItem="Nfk-pw-zHK" secondAttribute="bottom" id="uDG-Nn-G9n"/>
+                            <constraint firstAttribute="bottom" secondItem="Nfk-pw-zHK" secondAttribute="bottom" id="uDG-Nn-G9n"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gZ9-hF-UNs"/>
